examples/test/testpolicy2643.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2643
  namespace: namespace103
spec:
  podSelector:
    matchLabels:
      key6: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value2
          key47: value23
          key15: value32
      podSelector:
        matchLabels:
          key17: value47
          key21: value35
          key27: value32
